--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
           node-version: '20'
 
       - name: Install Python dependencies
+        working-directory: infra
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
