--- a/frontend/qr-class-manager/package.json
+++ b/frontend/qr-class-manager/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aws-amplify": "^6.15.8",
+    "html5-qrcode": "^2.3.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
